[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/Personagem/p1_walk01.png" type="Texture" id=1]
[ext_resource path="res://assets/Personagem/p1_walk02.png" type="Texture" id=2]
[ext_resource path="res://assets/Personagem/p1_walk03.png" type="Texture" id=3]
[ext_resource path="res://assets/Personagem/p1_walk05.png" type="Texture" id=4]
[ext_resource path="res://assets/Personagem/p1_walk08.png" type="Texture" id=5]
[ext_resource path="res://assets/Personagem/p1_walk07.png" type="Texture" id=6]
[ext_resource path="res://assets/Personagem/p1_walk06.png" type="Texture" id=7]
[ext_resource path="res://assets/Personagem/p1_walk04.png" type="Texture" id=8]
[ext_resource path="res://script/Player.gd" type="Script" id=9]
[ext_resource path="res://scenes/World_01.tscn" type="PackedScene" id=10]
[ext_resource path="res://script/CameraCorrent.gd" type="Script" id=11]
[ext_resource path="res://script/InputControl.gd" type="Script" id=12]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://script/Play.gd" type="Script" id=14]
[ext_resource path="res://script/HUD.gd" type="Script" id=15]
[ext_resource path="res://assets/coin48.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 28.3762
height = 27.1485

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.7163, 2.45996 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.5336, 34.8233 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10.0147, 1.57254 )

[sub_resource type="DynamicFont" id=6]
size = 90
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 13 )

[node name="GamePlay" type="Node2D"]

[node name="CameraCorrent" type="Camera2D" parent="."]
anchor_mode = 0
current = true
limit_left = 0
limit_smoothed = true
script = ExtResource( 11 )
distance = 600

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 64, 353.665 )
z_index = 10
collision_mask = 12
collision/safe_margin = 0.5
script = ExtResource( 9 )

[node name="Sprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 1 )
playing = true

[node name="CollisionPlayer" type="CollisionShape2D" parent="Player"]
self_modulate = Color( 1, 0.0235294, 0.0235294, 1 )
position = Vector2( -1.07288e-06, 4.4545 )
shape = SubResource( 2 )

[node name="AreaHead" type="Area2D" parent="Player"]
position = Vector2( -3.8147e-06, -39.1017 )
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/AreaHead"]
shape = SubResource( 3 )

[node name="AreaBody" type="Area2D" parent="Player"]
monitorable = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/AreaBody"]
position = Vector2( 0, 4.4545 )
shape = SubResource( 4 )

[node name="AreaFoot" type="Area2D" parent="Player"]
position = Vector2( 0, 44.8441 )
monitorable = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/AreaFoot"]
position = Vector2( -3.8147e-06, 3.65588 )
shape = SubResource( 5 )

[node name="World_01" parent="." instance=ExtResource( 10 )]

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 15 )

[node name="PanelWin" type="Panel" parent="HUD"]
visible = false
self_modulate = Color( 1, 1, 1, 0.772549 )
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/PanelWin"]
anchor_top = -0.003
anchor_bottom = -0.003
margin_top = 264.368
margin_right = 1280.0
margin_bottom = 405.368
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0.592157, 0, 1 )
text = "Foi dificil?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlay" type="Button" parent="HUD/PanelWin"]
margin_left = 415.01
margin_top = 377.373
margin_right = 806.01
margin_bottom = 491.373
script = ExtResource( 14 )

[node name="Label" type="Label" parent="HUD/PanelWin/ButtonPlay"]
margin_right = 391.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 7 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelCoin" type="Panel" parent="HUD"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1280.0
margin_bottom = 78.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/PanelCoin"]
self_modulate = Color( 0.94902, 0.67451, 0.0156863, 1 )
margin_left = 88.7754
margin_right = 288.775
margin_bottom = 78.0
custom_fonts/font = SubResource( 7 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HUD/PanelCoin"]
position = Vector2( 56.0166, 42.881 )
texture = ExtResource( 16 )
hframes = 61

[node name="InputControl" type="Node2D" parent="."]
script = ExtResource( 12 )

[connection signal="body_entered" from="Player/AreaHead" to="Player" method="_on_AreaHead_body_entered"]
[connection signal="body_entered" from="Player/AreaBody" to="Player" method="_on_AreaBody_body_entered"]
[connection signal="body_entered" from="Player/AreaFoot" to="Player" method="_on_AreaFoot_body_entered"]
[connection signal="body_exited" from="Player/AreaFoot" to="Player" method="_on_AreaFoot_body_exited"]
